--- a/json-comparison-app.html
+++ b/json-comparison-app.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comparador de Archivos JSON con Opción de Preservar Orden</title>
+    <title>Comparador de Archivos JSON Mejorado</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <style>
         body {
@@ -17,6 +17,7 @@
         .container {
             display: flex;
             flex-grow: 1;
+            margin-top: 1em; /* Añadido: separación vertical de 1em */
         }
         .panel {
             flex: 1;
@@ -34,11 +35,20 @@
             white-space: pre-wrap;
             word-wrap: break-word;
         }
-        .diff {
+        .diff-1-2 {
+            background-color: #ffe0b2;
+        }
+        .diff-2-3 {
             background-color: #ffcccc;
         }
-        .match {
+        .match-all {
             background-color: #ccffcc;
+        }
+        .match-1-2 {
+            background-color: #e6fffa;
+        }
+        .match-2-3 {
+            background-color: #e6f3ff;
         }
         .missing {
             background-color: #f0f0f0;
@@ -50,10 +60,26 @@
         .config input {
             margin-right: 10px;
         }
+        .panel-title {
+            font-weight: bold;
+            margin-bottom: 10px;
+            text-align: center;
+        }
+        .titles-config {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 10px;
+        }
+        .titles-config input {
+            width: 30%;
+        }
+        button {
+            margin-bottom: 1em; /* Añadido: separación vertical de 1em */
+        }
     </style>
 </head>
 <body>
-    <h1>Comparador de Archivos JSON con Opción de Preservar Orden</h1>
+    <h1>Comparador de Archivos JSON Mejorado</h1>
     <div class="config">
         <label for="suffix1">Sufijo 1:</label>
         <input type="text" id="suffix1" value="_extremo">
@@ -63,6 +89,11 @@
             <input type="checkbox" id="preserveOrder" checked> Preservar orden original
         </label>
     </div>
+    <div class="titles-config">
+        <input type="text" id="title1" placeholder="Título para el panel 1">
+        <input type="text" id="title2" placeholder="Título para el panel 2">
+        <input type="text" id="title3" placeholder="Título para el panel 3">
+    </div>
     <div>
         <textarea id="json1" placeholder="Pegue el primer JSON aquí (usar Sufijo 1)"></textarea>
         <textarea id="json2" placeholder="Pegue el segundo JSON aquí (usar Sufijo 2)"></textarea>
@@ -70,9 +101,18 @@
         <button onclick="compareJSON()">Comparar</button>
     </div>
     <div class="container">
-        <div id="panel1" class="panel"></div>
-        <div id="panel2" class="panel"></div>
-        <div id="panel3" class="panel"></div>
+        <div id="panel1" class="panel">
+            <div id="panelTitle1" class="panel-title"></div>
+            <div id="panelContent1"></div>
+        </div>
+        <div id="panel2" class="panel">
+            <div id="panelTitle2" class="panel-title"></div>
+            <div id="panelContent2"></div>
+        </div>
+        <div id="panel3" class="panel">
+            <div id="panelTitle3" class="panel-title"></div>
+            <div id="panelContent3"></div>
+        </div>
     </div>
 
     <script>
@@ -126,28 +166,35 @@
                 const value2 = key2 ? json2[key2] : undefined;
                 const value3 = key3 ? json3[key3] : undefined;
 
+                const match12 = value1 === value2 && value1 !== undefined;
                 const match23 = value2 === value3 && value2 !== undefined;
+                const matchAll = match12 && match23;
 
                 if (key1) {
-                    html1 += `<pre>${key1}: ${JSON.stringify(value1)}</pre>`;
+                    html1 += `<pre class="${matchAll ? 'match-all' : match12 ? 'match-1-2' : 'diff-1-2'}">${key1}: ${JSON.stringify(value1)}</pre>`;
                 }
 
                 if (key2) {
-                    html2 += `<pre class="${match23 ? 'match' : 'diff'}">${key2}: ${JSON.stringify(value2)}</pre>`;
-                } else if (keys1.some(k => removeSuffix(k, suffix1) === baseKey) || keys3.some(k => removeSuffix(k, suffix1) === baseKey)) {
+                    html2 += `<pre class="${matchAll ? 'match-all' : match12 && match23 ? 'match-1-2 match-2-3' : match12 ? 'match-1-2' : match23 ? 'match-2-3' : 'diff-1-2 diff-2-3'}">${key2}: ${JSON.stringify(value2)}</pre>`;
+                } else {
                     html2 += `<pre class="missing">${baseKey}${suffix2}: (valor faltante)</pre>`;
                 }
 
                 if (key3) {
-                    html3 += `<pre class="${match23 ? 'match' : 'diff'}">${key3}: ${JSON.stringify(value3)}</pre>`;
+                    html3 += `<pre class="${matchAll ? 'match-all' : match23 ? 'match-2-3' : 'diff-2-3'}">${key3}: ${JSON.stringify(value3)}</pre>`;
                 } else if (keys2.some(k => removeSuffix(k, suffix2) === baseKey)) {
                     html3 += `<pre class="missing">${baseKey}${suffix1}: (valor faltante)</pre>`;
                 }
             });
 
-            $("#panel1").html(html1);
-            $("#panel2").html(html2);
-            $("#panel3").html(html3);
+            $("#panelContent1").html(html1);
+            $("#panelContent2").html(html2);
+            $("#panelContent3").html(html3);
+
+            // Actualizar títulos de los paneles
+            $("#panelTitle1").text($("#title1").val() || "Panel 1");
+            $("#panelTitle2").text($("#title2").val() || "Panel 2");
+            $("#panelTitle3").text($("#title3").val() || "Panel 3");
         }
     </script>
 </body>
