--- a/json-comparison-app.html
+++ b/json-comparison-app.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comparador de Archivos JSON Mejorado</title>
+    <title>Comparador de Archivos JSON Mejorado con Equivalencias</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <style>
         body {
@@ -16,8 +16,14 @@
         }
         .container {
             display: flex;
+            flex-direction: column;
             flex-grow: 1;
-            margin-top: 1em; /* Añadido: separación vertical de 1em */
+            margin-top: 1em;
+        }
+        .panel-row {
+            display: flex;
+            flex-grow: 1;
+            margin-bottom: 1em;
         }
         .panel {
             flex: 1;
@@ -35,7 +41,7 @@
             white-space: pre-wrap;
             word-wrap: break-word;
         }
-        .diff-1-2 {
+        .diff-1-2, .diff-1-3 {
             background-color: #ffe0b2;
         }
         .diff-2-3 {
@@ -44,7 +50,7 @@
         .match-all {
             background-color: #ccffcc;
         }
-        .match-1-2 {
+        .match-1-2, .match-1-3 {
             background-color: #e6fffa;
         }
         .match-2-3 {
@@ -54,10 +60,10 @@
             background-color: #f0f0f0;
             color: #666666;
         }
-        .config {
+        .config, .equivalences {
             margin-bottom: 10px;
         }
-        .config input {
+        .config input, .equivalences input {
             margin-right: 10px;
         }
         .panel-title {
@@ -74,12 +80,18 @@
             width: 30%;
         }
         button {
-            margin-bottom: 1em; /* Añadido: separación vertical de 1em */
+            margin-bottom: 1em;
+        }
+        .equivalence-item {
+            margin-bottom: 5px;
+        }
+        .equivalence-item input {
+            margin-right: 5px;
         }
     </style>
 </head>
 <body>
-    <h1>Comparador de Archivos JSON Mejorado</h1>
+    <h1>Comparador de Archivos JSON Mejorado con Equivalencias</h1>
     <div class="config">
         <label for="suffix1">Sufijo 1:</label>
         <input type="text" id="suffix1" value="_extremo">
@@ -88,6 +100,24 @@
         <label for="preserveOrder">
             <input type="checkbox" id="preserveOrder" checked> Preservar orden original
         </label>
+    </div>
+    <div class="equivalences">
+        <label for="useEquivalences">
+            <input type="checkbox" id="useEquivalences"> Usar equivalencias
+        </label>
+        <div id="equivalencesList">
+            <div class="equivalence-item">
+                <input type="text" value="0" class="eq-value1">
+                <input type="text" value="false" class="eq-value2">
+                <button onclick="removeEquivalence(this)">Eliminar</button>
+            </div>
+            <div class="equivalence-item">
+                <input type="text" value="1" class="eq-value1">
+                <input type="text" value="true" class="eq-value2">
+                <button onclick="removeEquivalence(this)">Eliminar</button>
+            </div>
+        </div>
+        <button onclick="addEquivalence()">Añadir Equivalencia</button>
     </div>
     <div class="titles-config">
         <input type="text" id="title1" placeholder="Título para el panel 1">
@@ -101,17 +131,29 @@
         <button onclick="compareJSON()">Comparar</button>
     </div>
     <div class="container">
-        <div id="panel1" class="panel">
-            <div id="panelTitle1" class="panel-title"></div>
-            <div id="panelContent1"></div>
+        <div class="panel-row">
+            <div id="panel1" class="panel">
+                <div id="panelTitle1" class="panel-title"></div>
+                <div id="panelContent1"></div>
+            </div>
+            <div id="panel2" class="panel">
+                <div id="panelTitle2" class="panel-title"></div>
+                <div id="panelContent2"></div>
+            </div>
+            <div id="panel3" class="panel">
+                <div id="panelTitle3" class="panel-title"></div>
+                <div id="panelContent3"></div>
+            </div>
         </div>
-        <div id="panel2" class="panel">
-            <div id="panelTitle2" class="panel-title"></div>
-            <div id="panelContent2"></div>
-        </div>
-        <div id="panel3" class="panel">
-            <div id="panelTitle3" class="panel-title"></div>
-            <div id="panelContent3"></div>
+        <div class="panel-row">
+            <div id="panel4" class="panel">
+                <div id="panelTitle4" class="panel-title">JSON 1</div>
+                <div id="panelContent4"></div>
+            </div>
+            <div id="panel5" class="panel">
+                <div id="panelTitle5" class="panel-title">JSON 3</div>
+                <div id="panelContent5"></div>
+            </div>
         </div>
     </div>
 
@@ -128,6 +170,43 @@
             return key.replace(new RegExp(`${suffix}$`), '');
         }
 
+        function addEquivalence() {
+            const newEquivalence = `
+                <div class="equivalence-item">
+                    <input type="text" class="eq-value1">
+                    <input type="text" class="eq-value2">
+                    <button onclick="removeEquivalence(this)">Eliminar</button>
+                </div>
+            `;
+            $("#equivalencesList").append(newEquivalence);
+        }
+
+        function removeEquivalence(button) {
+            $(button).closest('.equivalence-item').remove();
+        }
+
+        function getEquivalences() {
+            const equivalences = new Map();
+            if ($("#useEquivalences").is(":checked")) {
+                $(".equivalence-item").each(function() {
+                    const value1 = $(this).find('.eq-value1').val();
+                    const value2 = $(this).find('.eq-value2').val();
+                    if (value1 && value2) {
+                        equivalences.set(value1, value2);
+                        equivalences.set(value2, value1);
+                    }
+                });
+            }
+            return equivalences;
+        }
+
+        function areEquivalent(value1, value2, equivalences) {
+            if (value1 === value2) return true;
+            const strValue1 = String(value1);
+            const strValue2 = String(value2);
+            return equivalences.get(strValue1) === strValue2 || equivalences.get(strValue2) === strValue1;
+        }
+
         function compareJSON() {
             const suffix1 = $("#suffix1").val();
             const suffix2 = $("#suffix2").val();
@@ -135,6 +214,7 @@
             const json1 = parseJSON($("#json1").val());
             const json2 = parseJSON($("#json2").val());
             const json3 = parseJSON($("#json3").val());
+            const equivalences = getEquivalences();
 
             if (!json1 || !json2 || !json3) {
                 alert("Error: Uno o más JSON son inválidos");
@@ -155,7 +235,7 @@
                 allBaseKeys = new Set([...allBaseKeys].sort());
             }
 
-            let html1 = '', html2 = '', html3 = '';
+            let html1 = '', html2 = '', html3 = '', html4 = '', html5 = '';
 
             allBaseKeys.forEach(baseKey => {
                 const key1 = keys1.find(k => removeSuffix(k, suffix1) === baseKey);
@@ -166,12 +246,16 @@
                 const value2 = key2 ? json2[key2] : undefined;
                 const value3 = key3 ? json3[key3] : undefined;
 
-                const match12 = value1 === value2 && value1 !== undefined;
-                const match23 = value2 === value3 && value2 !== undefined;
+                const match12 = areEquivalent(value1, value2, equivalences);
+                const match23 = areEquivalent(value2, value3, equivalences);
+                const match13 = areEquivalent(value1, value3, equivalences);
                 const matchAll = match12 && match23;
 
                 if (key1) {
                     html1 += `<pre class="${matchAll ? 'match-all' : match12 ? 'match-1-2' : 'diff-1-2'}">${key1}: ${JSON.stringify(value1)}</pre>`;
+                    html4 += `<pre class="${match13 ? 'match-1-3' : 'diff-1-3'}">${key1}: ${JSON.stringify(value1)}</pre>`;
+                } else if (key3) {
+                    html4 += `<pre class="missing">${baseKey}${suffix1}: (valor faltante)</pre>`;
                 }
 
                 if (key2) {
@@ -182,14 +266,21 @@
 
                 if (key3) {
                     html3 += `<pre class="${matchAll ? 'match-all' : match23 ? 'match-2-3' : 'diff-2-3'}">${key3}: ${JSON.stringify(value3)}</pre>`;
+                    html5 += `<pre class="${match13 ? 'match-1-3' : 'diff-1-3'}">${key3}: ${JSON.stringify(value3)}</pre>`;
                 } else if (keys2.some(k => removeSuffix(k, suffix2) === baseKey)) {
                     html3 += `<pre class="missing">${baseKey}${suffix1}: (valor faltante)</pre>`;
+                }
+
+                if (key1 && !key3) {
+                    html5 += `<pre class="missing">${baseKey}${suffix1}: (valor faltante)</pre>`;
                 }
             });
 
             $("#panelContent1").html(html1);
             $("#panelContent2").html(html2);
             $("#panelContent3").html(html3);
+            $("#panelContent4").html(html4);
+            $("#panelContent5").html(html5);
 
             // Actualizar títulos de los paneles
             $("#panelTitle1").text($("#title1").val() || "Panel 1");
